@@ -16,7 +16,7 @@
 #define MZSCHEME_VERSION_X 8
 #define MZSCHEME_VERSION_Y 11
 #define MZSCHEME_VERSION_Z 900
-#define MZSCHEME_VERSION_W 0
+#define MZSCHEME_VERSION_W 1
 
 /* A level of indirection makes `#` work as needed: */
 #define AS_a_STR_HELPER(x) #x
